Fix long shortcuts break layout (initial attempt)
The help dialog now only allow shortcuts that are 10 chars or less long,
in order not to break the layout. (Such long shortcuts are silly anyways.)

When the shortcuts cannot fit one line anymore, they now continue on the
next line.

Note: This is a little rough around the edges.

--- a/extension/resources/style.css
+++ b/extension/resources/style.css
@@ -45,7 +45,7 @@ input.VimFxNotFound#VimFxFindInput {
     color: red !important;
 }
 
-div.VimFxKeySequence {
+.VimFxKeySequence {
     max-width:70px !important;
     text-align: right !important;
     font-weight:bold !important;
@@ -54,7 +54,9 @@ div.VimFxKeySequence {
 }
 
 .VimFxKeyLink {
-    display: inline !important;
+    float: right !important;
+    margin-right: 4px !important;
+    margin-top: 4px !important;
     background: #777 !important;
     border: none !important;
     color: #fff !important;
@@ -227,8 +229,9 @@ div#VimFxHelpDialog tr.VimFxReset {
 
 div#VimFxHelpDialog td.VimFxReset {
     display: table-cell !important;
-    padding-top: 2px !important;
-    padding-bottom: 4px !important;
+    /*padding-top: 2px !important;*/
+    /*padding-bottom: 4px !important;*/
+    vertical-align: middle !important;
     line-height: 15px !important;
 }
 
